--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,8 @@
 <nav>
-  <a href="/">Home</a>
-  <a href="/about.html">About</a>
+  <a href="/home/" {% if page.url == "/" %}style="color: red;"{% endif %}>
+    Home
+  </a>
+  <a href="/home/about.html" {% if page.url == "/about.html" %}style="color: red;"{% endif %}>
+    About
+  </a>
 </nav>
